--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script src="sketch.js"></script>
     <script src="trafficLight.js"></script>
     <script src="lamp.js"></script>
+    <script src="lightsController.js"></script>
   </body>
 </html>
